--- a/TalimulFcopy/Course-Details.html
+++ b/TalimulFcopy/Course-Details.html
@@ -2087,7 +2087,7 @@ body.dark-theme .modal-body {
         // ====================
         const LoginModule = (() => {
             // ডেটাবেস URL (এটি আপনার বেকেন্ড API URL দিয়ে প্রতিস্থাপন করুন)
-            const DB_API_URL = 'https://tia-backend-ydym.onrender.com';
+            const DB_API_URL = 'https://tia-backend-ydym.onrender.com/api';
             
             // গ্লোবাল ভেরিয়েবল
             let otpTimer;
