আপডেট ফাইল পুশ করা হয়েছে

--- a/TalimulFcopy/Course-Details.html
+++ b/TalimulFcopy/Course-Details.html
@@ -2019,7 +2019,7 @@ body.dark-theme .modal-body {
     // ====================
     const LoginModule = (() => {
         // ডেটাবেস URL (এটি আপনার বেকেন্ড API URL দিয়ে প্রতিস্থাপন করুন)
-        const DB_API_URL = 'https://tia-backend-ydym.onrender.com/api';
+        const DB_API_URL = 'https://tia-backend-ydym.onrender.com/api/send-otp';
         
         // গ্লোবাল ভেরিয়েবল
         let otpTimer;
@@ -2742,6 +2742,7 @@ body.dark-theme .modal-body {
     window.togglePasswordVisibility = togglePasswordVisibility;
     window.closeLoginPopup = LoginModule.closeLoginPopup;
 </script>
+
 <style>
 /* Close (cancel) button style for login popup */
 .close-login {
@@ -2785,6 +2786,76 @@ function togglePasswordVisibility(inputId, toggleId) {
     }
 }
 </script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -4123,11 +4194,6 @@ function togglePasswordVisibility(inputId, toggleId) {
         </div>
     </div>
 
-
-
-
-   
-
 <!-- Lockal way -->
 <script>
     // Current payment being viewed in modal
@@ -4961,61 +5027,6 @@ document.addEventListener('DOMContentLoaded', function() {
 
   
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
