আপডেট ফাইল পুশ করা হয়েছে

--- a/TalimulFcopy/Course-Details.html
+++ b/TalimulFcopy/Course-Details.html
@@ -2019,7 +2019,7 @@ body.dark-theme .modal-body {
     // ====================
     const LoginModule = (() => {
         // ডেটাবেস URL (এটি আপনার বেকেন্ড API URL দিয়ে প্রতিস্থাপন করুন)
-        const DB_API_URL = 'https://tia-backend-ydym.onrender.com/send-otp';
+        const DB_API_URL = 'https://tia-backend-ydym.onrender.com/api';
         
         // গ্লোবাল ভেরিয়েবল
         let otpTimer;
